# study-cpp

./: README.md  两个矩形相交的面积.md
CMakeLists/: README.md
CMakeLists/Docs/cmake-commands/: link_directories.md  message.md
CMakeLists/Docs/cmake-commands/FlowCtrl/: if.md
CMakeLists/helloworld/: CMakeLists.txt
CMakeLists/helloworld/include/: helloShared.h
CMakeLists/helloworld/src/: CMakeLists.txt
CMakeLists/helloworld/src/hello/: CMakeLists.txt  helloShared.cpp
CMakeLists/helloworld/src/main/: CMakeLists.txt  main.cpp
HTTP/: README.md
HTTP/Examples/Example_CMakeLists/: README.md
HTTP/Examples/HttpClient/: httpclient.cpp  httpclient.h
JNI/: README.md  UVCCamera.java  serenegiant_usb_UVCCamera.cpp
JNI/JNI_call_Java/: AbstractUVCCameraHandler.java  IFrameCallback.java  README.md  String数组的传递.md  UVCPreview.cpp  int数组作参数_回调java.md
JNI/JNI_call_Java/MyJNICallJava/: MainActivity.java  NativeFunction.java  native-lib.cpp
JNI/JNI_update_UI/: BaseActivity.java  HandlerThreadHandler.java  README.md
JNI/utilbase/: README.md
JNI_call_Java/: README.md
accTest/: CMakeLists.txt  mtcnnAttribute.cpp  mtcnnAttribute.h  newdata.txt  readFile.cpp  readfile
face_native/: native-lib.cpp  native-lib2.cpp
notes/: ldd.md
read_write/: readFile.cpp
vector/: README.md
